--- a/src/App.css
+++ b/src/App.css
@@ -37,8 +37,9 @@ main {
   border-radius: 10px;
   width: calc(100% - 32px);
   min-width: 343px;
-  min-height: 315px;
+  /* min-height: 315px; */
   padding-top: 43px;
+  padding-bottom: 64px;
   position: relative;
 }
 
@@ -56,8 +57,8 @@ h1 > span {
 .joke-div {
   text-align: center;
   margin: 0 auto;
-  margin-top: 35px;
-  border: 1px solid red;
+  margin-top: 30px;
+  /* border: 1px solid red; */
   min-height: 124px;
   font-size: 23px;
   font-weight: 800;
@@ -72,25 +73,33 @@ h1 > span {
 button {
   background-color: rgb(83, 254, 170);
   border: none;
+  border-radius: 50%;
   outline: none;
-  color: rgb(21, 48, 48);
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  width: 200px;
-  padding-block: 5px;
-  font-size: 18px;
-  border-radius: 6px;
-  font-weight: bold;
+  width: 64px;
+  height: 64px;
   position: absolute;
-  bottom: -16px;
+  bottom: -33px;
   right: 50%;
   transform: translateX(50%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
   cursor: pointer;
   transition: all 200ms ease-out;
 }
 
 button:hover {
   background-color: rgb(46, 247, 149);
+}
+
+button > * {
+  transition: all 300ms ease-out;
+}
+
+button:hover > * {
+  transform: rotate(90deg);
 }
 
 button:active {
@@ -122,6 +131,17 @@ button:active {
   fill: #ff0000;
   display: block;
   animation: shake infinite 2.2s linear 200ms;
+}
+
+.divider {
+  margin: 0 auto;
+  margin-top: 24px;
+  width: calc(100% - 80px);
+  height: 16px;
+  background-image: url("./images/pattern-divider-mobile.svg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 @keyframes moveDown {
