--- a/src/App.css
+++ b/src/App.css
@@ -37,10 +37,11 @@ main {
   border-radius: 10px;
   width: calc(100% - 32px);
   min-width: 343px;
-  /* min-height: 315px; */
+  max-width: 400px;
   padding-top: 43px;
   padding-bottom: 64px;
   position: relative;
+  transition: all 200ms ease-out;
 }
 
 h1 {
@@ -58,7 +59,6 @@ h1 > span {
   text-align: center;
   margin: 0 auto;
   margin-top: 30px;
-  /* border: 1px solid red; */
   min-height: 124px;
   font-size: 23px;
   font-weight: 800;
@@ -99,7 +99,7 @@ button > * {
 }
 
 button:hover > * {
-  transform: rotate(90deg);
+  transform: rotate(180deg);
 }
 
 button:active {
@@ -141,7 +141,7 @@ button:active {
   background-image: url("./images/pattern-divider-mobile.svg");
   background-position: center;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: contain;
 }
 
 @keyframes moveDown {
@@ -189,5 +189,17 @@ button:active {
 
   100% {
     transform: rotate(0) scale(1);
+  }
+}
+
+@media screen and (min-width: 700px) {
+  main {
+    width: 540px;
+    min-width: unset;
+    max-width: unset;
+  }
+
+  .divider {
+    background-image: url("./images/pattern-divider-desktop.svg");
   }
 }
