--- a/src/App.css
+++ b/src/App.css
@@ -16,11 +16,20 @@ body {
 }
 
 .attribution {
-  font-size: 11px;
+  font-size: 1.2rem;
+  font-weight: 600;
   text-align: center;
+  font-family: monospace;
+  padding-inline: 2rem;
+  position: absolute;
+  bottom: 2%;
+  color: var(--Light-Cyan);
+  color: var(--Neon-Green);
 }
+
 .attribution a {
-  color: hsl(228, 45%, 44%);
+  color: var(--Light-Cyan);
+  margin-left: 0.5rem;
 }
 
 #root {
@@ -28,6 +37,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  position: relative;
 }
 
 main {
@@ -91,7 +101,8 @@ button {
 }
 
 button:hover {
-  background-color: rgb(46, 247, 149);
+  background-color: rgb(83, 255, 171);
+  box-shadow: 0px 0px 23px 4px rgb(83 255 171);
 }
 
 button > * {
@@ -101,6 +112,7 @@ button > * {
 button:hover > * {
   transform: rotate(180deg);
 }
+
 
 button:active {
   transform: translateX(50%) scale(0.9);
